--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -30,25 +30,28 @@
 
 		<br> <br>
 
-		<h1>회원가입</h1>
+		<h1>로그인</h1>
 		<br>
-		<form action="/create" method="post">
+		<form action="/login" method="post">
 			<div class="form-row">
 				<div class="form-group col-md-6">
 					<label for="ID">ID</label> <input type="text" class="form-control"
 						id="id" name="id">
 				</div>
+
+			</div>
+			<div class="form-row">
 				<div class="form-group col-md-6">
-					<label for="Password">Password</label> <input type="password"
-						class="form-control" id="password" name="password">
+					<label for="PW">PW</label> <input type="text" class="form-control"
+						id="password" name="password">
 				</div>
+
 			</div>
-			<div class="form-group">
-				<label for="Name">Name</label> <input type="text"
-					class="form-control" id="name" placeholder="홍길동" name="name">
-			</div>
-			<button type="submit" class="btn btn-primary">회원가입</button>
+			<button type="submit" class="btn btn-primary">로그인</button>
 		</form>
+
+
+
 
 		<br> <br> <br> <br> <br> <br> <br>
 		<br>
